# inverse-gas-chromatography

./: .gitignore  README.md  pyproject.toml
Inverse Gas Chromatography/: Acid-Base Profile.ipynb  Experimenting.ipynb  General Plot.ipynb  Parser Cheat Sheet.ipynb  Parser.py
Inverse Gas Chromatography/Data/: Sugar SE.csv
examples/: test_package.py
examples/notebooks/: 00_test_package.ipynb
outputs/: .gitkeep
src/igcsea/: __init__.py
src/igcsea/analysis/: __init__.py  acid_base.py  dorris_gray.py  interpolation.py  manual_dispersive.py  peak_max.py  surface_energy.py
src/igcsea/core/: __init__.py  constants.py  models.py
src/igcsea/parsing/: __init__.py  parser.py
src/igcsea/plotting/: __init__.py
src/igcsea/utils/: __init__.py
tests/: __init__.py  conftest.py  test_acid_base.py  test_dorris_gray.py  test_interpolation.py  test_manual_dispersive.py  test_parser.py  test_surface_energy.py
